--- a/src/Components/Profile/style.css
+++ b/src/Components/Profile/style.css
@@ -1,8 +1,12 @@
-.profile-image {
-  height: 100px;
-  width: 100px;
-  border-radius: 50%;
-  border: 0.5px solid;
+.profile-img {
+	height: 100px;
+	width: 100px;
+	border-radius: 50%;
+	border: 0.5px solid;
+}
+
+#profile-img-input {
+	display: none;
 }
 
 .btn-replace {
