--- a/src/Components/Profile/style.css
+++ b/src/Components/Profile/style.css
@@ -1,18 +1,132 @@
-.profile-img {
+.Profile {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: flex-start;
+	padding: 15px 24px;
+	gap: 16px;
+
+	width: 390px;
+	height: 180px;
+	margin: 0 auto;
+	border-bottom: 0.5px solid;
+}
+
+.ProfileImg-ProfileText-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: flex-start;
+	padding: 0px 16px 0px 0px;
+	
+	width: 342px;
+	height: 100px;
+}
+
+.ProfileImg__img {
 	height: 100px;
 	width: 100px;
 	border-radius: 50%;
 	border: 0.5px solid;
 }
 
-#profile-img-input {
+.ProfileImg__form__input {
 	display: none;
 }
 
-.btn-replace {
+.ProfileText-container {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	padding: 12px 0px 0px;
+	gap: 8px;
+	
+	width: 192px;
+	height: 100px;
+}
+
+.ProfileText-container--editing {
+	padding: 10px 0px 0px;
+	gap: 4px;
+}
+
+.ProfileText__text-nickname {
+	margin: 0;
+}
+
+.ProfileText__text-msg {
+	margin: 0;
+}
+
+.ProfileText__input {
+	width: 182px;
+}
+
+.ProfileText__textarea {
+	width: 184px;
+	resize: none;
+	
+}
+
+.ProfileBtns-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: flex-start;
+	padding: 0px 8px;
+	
+	width: 342px;
+	height: 24px;
+}
+
+/* .ProfileBtns__btn {
+
+}
+
+.ProfileBtns__btn--featured {
+
+} */
+
+.ProfileBtns__btn--replaced {
 	display: none;
 }
 
-.hidden {
+.ProfileBtns__btn--hidden {
 	visibility: hidden;
+}
+
+
+/*					Fonts	 				*/
+
+.font-bold-body {
+	font-family: 'SF Pro Text';
+	font-style: normal;
+	font-weight: 600;
+	font-size: 17px;
+	line-height: 22px;
+	/* identical to box height, or 129% */
+
+	letter-spacing: -0.408px;
+}
+
+.font-regular-body {
+	font-family: 'SF Pro Text';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 17px;
+	line-height: 22px;
+	/* or 147% */
+
+	letter-spacing: -0.408px;
+}
+
+.font-input {
+	font-family: 'SF Pro Text';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 15px;
+	line-height: 22px;
+	/* or 156% */
+
+	letter-spacing: -0.32px;
 }
