--- a/src/Components/Profile/style.css
+++ b/src/Components/Profile/style.css
@@ -3,10 +3,14 @@
 :root {
 	--light-green: #E1EEDD;
 	--light-gray: #DEDEDE;
-  }
-  
+}
+
 
 /*					Classes	 				*/
+
+body {
+	font-family: 'AppleSDGothicNeo', 'Noto Sans KR', sans-serif;
+}
 
 .Profile {
 	display: flex;
@@ -27,7 +31,6 @@
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: flex-start;
-	padding: 0px 16px 0px 0px;
 	
 	width: 342px;
 	height: 100px;
@@ -45,37 +48,33 @@
 }
 
 .ProfileText-container {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	padding: 12px 0px 0px;
-	gap: 8px;
-	
-	width: 192px;
-	height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 8px 0px 0px;
+    gap: 12px;
+    
+    width: 220px;
+    height: 100px;
 }
 
 .ProfileText-container--editing {
-	padding: 10px 0px 0px;
-	gap: 4px;
+    padding: 7px 0px 0px;
+    gap: 10px;
 }
 
 .ProfileText__text-nickname {
-	margin: 0;
+    margin: 0;
 }
 
 .ProfileText__text-msg {
-	margin: 0;
-}
-
-.ProfileText__input {
-	width: 182px;
+    margin: 0;
 }
 
 .ProfileText__textarea {
-	width: 184px;
-	resize: none;
-	
+    width: 220px;
+    resize: none;
+	font-family: 'AppleSDGothicNeo', 'Noto Sans KR', sans-serif;
 }
 
 .ProfileBtns-container {
@@ -120,40 +119,34 @@
 /*					Fonts	 				*/
 
 .font-body-bold {
-	font-family: 'SF Pro Text';
 	font-style: normal;
 	font-weight: 600;
-	font-size: 17px;
-	line-height: 22px;
+	font-size: 16px;
+	line-height: 16px;
 	/* identical to box height, or 129% */
 
 	letter-spacing: -0.408px;
 }
 
 .font-body-regular {
-	font-family: 'SF Pro Text';
 	font-style: normal;
 	font-weight: 400;
-	font-size: 17px;
-	line-height: 22px;
+	font-size: 16px;
+	line-height: 20px;
 	/* or 147% */
 
 	letter-spacing: -0.408px;
 }
 
 .font-input {
-	font-family: 'SF Pro Text';
 	font-style: normal;
 	font-weight: 400;
 	font-size: 15px;
-	line-height: 22px;
+	line-height: 17px;
 	/* or 156% */
-
-	letter-spacing: -0.32px;
 }
 
 .font-caption1-regular {
-	font-family: 'SF Pro Text';
 	font-style: normal;
 	font-weight: 400;
 	font-size: 12px;
@@ -162,7 +155,6 @@
 }
 
 .font-caption1-bold {
-	font-family: 'SF Pro Text';
 	font-style: normal;
 	font-weight: 600;
 	font-size: 12px;
