style: 프로필 사진 편집 오버레이 구현
- What & How:
	- 카메라 이미지와 투명도 배경을 적용한 div 태그를 깔아서 구현
	- 레이어처럼 적용될줄 알았는데, 카메라 이미지도 div 태그의 영향을 받음..
ECOPERCENT-207

--- a/src/Components/Profile/style.css
+++ b/src/Components/Profile/style.css
@@ -36,6 +36,26 @@ body {
 	height: 100px;
 }
 
+.ProfileImg__form__div {
+	display: inline-block;
+	position: absolute;
+	height: 100.5px;
+	width: 100.5px;
+	border-radius: 50%;
+	background: rgba(0, 0, 0, 0.2);
+}
+
+.ProfileImg__form__img--overlay {
+	position: absolute;
+	height: 40px;
+	width: 40px;
+	padding: 30px 30px;
+}
+
+.ProfileImg__form__img--uploaded {
+	display: none;
+}
+
 .ProfileImg__img {
 	height: 100px;
 	width: 100px;
